--- a/provision/roles/php/tasks/main.yml
+++ b/provision/roles/php/tasks/main.yml
@@ -23,6 +23,7 @@
     - php5-xhprof
     - php5-intl
     - php5-apcu
+    - php5-ldap
 
 - name: Configure php.ini
   lineinfile: dest=/etc/php5/cli/php.ini line="{{ item.line }}" regexp="{{ item.regexp }}" backup=yes
