--- a/composer.json
+++ b/composer.json
@@ -26,11 +26,13 @@
         "symfony/monolog-bundle": "^2.8",
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
-        "incenteev/composer-parameter-handler": "^2.0"
+        "incenteev/composer-parameter-handler": "^2.0",
+        "eightpoints/guzzle-bundle": "^4.4"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
-        "symfony/phpunit-bridge": "^2.7"
+        "symfony/phpunit-bridge": "^2.7",
+        "phpunit/phpunit": "^4.8"
     },
     "scripts": {
         "post-install-cmd": [
