--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -1,9 +1,15 @@
-# Learn more about services, parameters and containers at
-# http://symfony.com/doc/current/book/service_container.html
 parameters:
 #    parameter_name: value
 
 services:
-#    service_name:
-#        class: AppBundle\Directory\ClassName
-#        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
+    app.ldap_client:
+        class: AppBundle\Ldap\LdapClient
+        arguments: ["%ldap_host%", "%ldap_port%", "%ldap_dn%", "%ldap_pass%"]
+
+    app.api_client:
+        class: AppBundle\Api\ApiClient
+        arguments: ["@guzzle.client.api_grouphub"]
+
+    app.sync:
+        class: AppBundle\Service\SyncService
+        arguments: ["@app.ldap_client", "@app.api_client", "@logger"]
