--- a/provision/roles/nbz4live.php-fpm/tasks/main.yml
+++ b/provision/roles/nbz4live.php-fpm/tasks/main.yml
@@ -10,15 +10,19 @@
     update_cache=yes
     cache_valid_time={{ apt_cache_valid_time }}
   with_items: php_fpm_apt_packages
-  environment: env
+  environment: "{{ env }}"
   when: ansible_os_family == "Debian"
+  notify:
+     - restart php-fpm
   tags: [packages,php,fpm]
 
 - name: Install the php packages (YUM)
   yum: name={{ item }} state=present
   with_items: php_fpm_yum_packages
-  environment: env
+  environment: "{{ env }}"
   when: ansible_os_family == "RedHat"
+  notify:
+     - restart php-fpm
   tags: [packages,php,fpm]
 
 - name: Copy the PHP configuration file
@@ -29,7 +33,7 @@
     value="{{ item.value }}"
     backup=yes
   with_items: php_fpm_ini
-  notify: 
+  notify:
    - restart php-fpm
   tags: [configuration,php,fpm]
 
@@ -46,7 +50,33 @@
     value="{{ item.value }}"
     backup=yes
   with_items: php_fpm_config
-  notify: 
+  register: copy_fpm_config
+  notify:
+   - restart php-fpm
+  tags: [configuration,php,fpm]
+
+- name: Delete the include line from the ini file
+  ini_file: >
+    dest={{ php_fpm_config_path }}
+    section=global
+    option=include
+    state=absent
+    backup=no
+  when: copy_fpm_config.changed
+  notify:
+   - restart php-fpm
+  tags: [configuration,php,fpm]
+
+- name: Readd the include line to the ini file
+  ini_file: >
+    dest={{ php_fpm_config_path }}
+    section=global
+    option=include
+    value="{{ php_fpm_pool_d }}/*.conf"
+    state=present
+    backup=no
+  when: copy_fpm_config.changed
+  notify:
    - restart php-fpm
   tags: [configuration,php,fpm]
 
@@ -64,7 +94,7 @@
     backup=yes
   with_items: php_fpm_pools
   when: php_fpm_pools|lower != 'none'
-  notify: 
+  notify:
    - restart php-fpm
   tags: [configuration,php,fpm]
 
