--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -17,4 +17,8 @@ parameters:
     ldap_dn:   ~
     ldap_pass: ~
 
+    users_dn: 'ou=Users,ou=SURFUni,dc=surfuni,dc=org'
+    groups_dn: 'ou=Formalgroups,dc=surfuni,dc=org'
+    grouphub_dn: 'ou=Grouphub,dc=surfuni,dc=org'
+
     password_voot: ~
