--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "^2.0",
         "eightpoints/guzzle-bundle": "^4.4",
-        "symfony/assetic-bundle": "^2.7"
+        "symfony/assetic-bundle": "^2.7",
+        "twig/extensions": "^1.3"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
