Added security check to determine whether or not a user is allowed to add semi-formal groups

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -37,3 +37,10 @@ services:
     app.group_manager:
         class: AppBundle\Manager\GroupManager
         arguments: ["@app.api_client"]
+
+    app.admin_voter:
+        class: AppBundle\Security\AdminVoter
+        arguments: ["@app.group_manager"]
+        tags:
+            - { name: security.voter }
+        public: false
