--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -44,3 +44,9 @@ services:
         tags:
             - { name: security.voter }
         public: false
+
+    app.form.group:
+        class: AppBundle\Form\GroupType
+        arguments: ['@security.authorization_checker', '@app.group_manager', '@security.token_storage']
+        tags:
+            - { name: form.type }
