--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,6 @@
     "require": {
         "php": ">=5.5.9",
         "symfony/symfony": "3.0.*",
-        "doctrine/orm": "^2.5",
-        "doctrine/doctrine-bundle": "^1.6",
         "doctrine/doctrine-cache-bundle": "^1.2",
         "symfony/swiftmailer-bundle": "^2.3",
         "symfony/monolog-bundle": "^2.8",
@@ -29,7 +27,9 @@
         "incenteev/composer-parameter-handler": "^2.0",
         "eightpoints/guzzle-bundle": "^4.4",
         "symfony/assetic-bundle": "^2.7",
-        "twig/extensions": "^1.3"
+        "twig/extensions": "^1.3",
+        "openid/php-openid": "dev-master#ee669c6a9d4d95b58ecd9b6945627276807694fb",
+        "simplesamlphp/simplesamlphp": "^1.13"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
