--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -26,7 +26,7 @@ framework:
     trusted_hosts:   ~
     trusted_proxies: ~
     session:
-        # handler_id set to null will use default session handler from php.ini
+        storage_id: session.storage.php_bridge
         handler_id:  ~
         save_path:   "%kernel.root_dir%/../var/sessions/%kernel.environment%"
     fragments:       ~
@@ -67,3 +67,7 @@ assetic:
     filters:
         cssrewrite:
             apply_to: '\.css$'
+
+hslavich_simplesamlphp:
+    sp: default-sp
+    authentication_attribute: urn:mace:dir:attribute-def:uid
