--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "symfony/assetic-bundle": "^2.7",
         "twig/extensions": "^1.3",
         "openid/php-openid": "dev-master#ee669c6a9d4d95b58ecd9b6945627276807694fb",
-        "simplesamlphp/simplesamlphp": "^1.13"
+        "simplesamlphp/simplesamlphp": "dev-master",
+        "hslavich/simplesamlphp-bundle": "dev-master"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
