--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,12 @@
             "Tests\\": "tests/"
         }
     },
+    "repositories": [
+        {
+            "type":"vcs",
+            "url":"https://github.com/ibuildingsnl/SimplesamlphpBundle.git"
+        }
+    ],
     "require": {
         "php": ">=5.5.9",
         "symfony/symfony": "3.0.*",
