--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -38,6 +38,14 @@ services:
         class: AppBundle\Manager\GroupManager
         arguments: ["@app.api_client", "@app.grouphub_ldap_client"]
 
+    app.membership_manager:
+        class: AppBundle\Manager\MembershipManager
+        arguments: ["@app.api_client"]
+
+    app.user_manager:
+        class: AppBundle\Manager\UserManager
+        arguments: ["@app.api_client"]
+
     app.admin_voter:
         class: AppBundle\Security\AdminVoter
         arguments: ["@app.group_manager"]
