--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,6 @@
             "Tests\\": "tests/"
         }
     },
-    "repositories": [
-        {
-            "type":"vcs",
-            "url":"https://github.com/ibuildingsnl/SimplesamlphpBundle.git"
-        }
-    ],
     "require": {
         "php": ">=5.5.9",
         "symfony/symfony": "3.0.*",
@@ -34,9 +28,7 @@
         "eightpoints/guzzle-bundle": "^4.4",
         "symfony/assetic-bundle": "^2.7",
         "twig/extensions": "^1.3",
-        "openid/php-openid": "dev-master#ee669c6a9d4d95b58ecd9b6945627276807694fb",
-        "simplesamlphp/simplesamlphp": "dev-master",
-        "hslavich/simplesamlphp-bundle": "dev-master"
+        "hslavich/simplesamlphp-bundle": "^1.1"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
