--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "eightpoints/guzzle-bundle": "^4.4",
         "symfony/assetic-bundle": "^2.7",
         "twig/extensions": "^1.3",
-        "hslavich/simplesamlphp-bundle": "^1.1"
+        "hslavich/simplesamlphp-bundle": "^1.1",
+        "smart-core/accelerator-cache-bundle": "^1.1"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
