--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -19,9 +19,10 @@ framework:
     csrf_protection: ~
     validation:      { enable_annotations: true }
     #serializer:      { enable_annotations: true }
+    assets:
+        version: 1
     templating:
         engines: ['twig']
-        assets_version: 1
     default_locale:  "%locale%"
     trusted_hosts:   ~
     trusted_proxies: ~
