--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -42,3 +42,5 @@ parameters:
     org_groups_column_title_nl: Organisatie groepen
     all_groups_column_title_en: All groups
     all_groups_column_title_nl: Alle groepen
+
+    documentation_url: https://wiki.surfnet.nl/display/P3GFeI2015/GroupHub
