--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -27,7 +27,7 @@ services:
 
     app.sync:
         class: AppBundle\Service\SyncService
-        arguments: ["@app.grouphub_ldap_client", "@app.api_client", "@logger"]
+        arguments: ["@app.grouphub_ldap_client", "@app.api_client", "@logger", "%admin_groups_sync%"]
 
     twig.extension.intl:
         class: Twig_Extensions_Extension_Intl
