Added queue which holds a list of groups to sync.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -92,3 +92,8 @@ hslavich_simplesamlphp:
 accelerator_cache:
     host: %url%
     web_dir: %kernel.root_dir%/../web
+
+doctrine_cache:
+    providers:
+        cache:
+            type: file_system
