--- a/provision/provision.yml
+++ b/provision/provision.yml
@@ -92,8 +92,7 @@
         - npm install -g uglify-js
         - npm install -g uglifycss
 
-    - gem: name=capistrano
-    - gem: name=capistrano-symfony version=1.0.0.rc1
+    - gem: name=capistrano-symfony pre_release=true
 
     - name: Configure virtualhost
       template: src="files/vhost.j2" dest="/etc/apache2/sites-available/{{ sitename }}"
