--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -9,11 +9,12 @@ services:
 
     app.ldap_normalizer:
         class: AppBundle\Ldap\Normalizer
+        arguments: ["%ldap.mapping%"]
         private: true
 
     app.grouphub_ldap_client:
         class: AppBundle\Ldap\GrouphubClient
-        arguments: ["@app.ldap_client", "@app.ldap_normalizer", "%users_dn%", "%groups_dn%", "%grouphub_dn%", "%formal_dn%", "%adhoc_dn%", "%admin_groups_dn%"]
+        arguments: ["@app.ldap_client", "@app.ldap_normalizer", "%users_dn%", "%groups_dn%", "%grouphub_dn%", "%formal_dn%", "%adhoc_dn%", "%admin_groups_dn%", "%user_query%", "%group_query%"]
         private: true
 
     app.api_normalizer:
