Added another configurable LDAP field mapping, also updated format/escaping of CN property and removed group 'name' property from LDAP.

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -34,10 +34,10 @@ parameters:
             loginName: uid
             email:     mail
         group:
-            name:        cn
             description: description
             objectClass: groupOfNames
             groupType:   ~
+            accountName: ~
 
     admin_groups_sync: false
     admin_groups_dn: ~
