Separated LDAP read and write functionality using two distinct and configurable clients.

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -14,10 +14,15 @@ parameters:
     grouphub_api_username: 'grouphub'
     grouphub_api_password: ~
 
-    ldap_host: ~
-    ldap_port: 389
-    ldap_dn:   ~
-    ldap_pass: ~
+    ldap_read_host: ~
+    ldap_read_port: 389
+    ldap_read_dn:   ~
+    ldap_read_pass: ~
+
+    ldap_write_host: ~
+    ldap_write_port: 389
+    ldap_write_dn:   ~
+    ldap_write_pass: ~
 
     users_dn: ['ou=Users,ou=SURFUni,dc=surfuni,dc=org']
     user_query: 'cn=*'
