Added support for fallback LDAP clients which will be used when no results are found for a specific DN. The client will be matched based on the DC's of the DN.

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -24,6 +24,13 @@ parameters:
     ldap_write_dn:   ~
     ldap_write_pass: ~
 
+    ldap_fallback:
+        alias:
+            host: ~
+            port: 389
+            dn:   ~
+            pass: ~
+
     users_dn: ['ou=Users,ou=SURFUni,dc=surfuni,dc=org']
     user_query: 'cn=*'
     groups_dn: ['ou=Formalgroups,dc=surfuni,dc=org']
