Added support for more mapped attributes

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -49,6 +49,8 @@ parameters:
             name_prefix: ~
             description: description
             accountName: ~
+            owner: ~
+            name: ~
             extra_attributes:
                 objectClass: groupOfNames
 
