Added code coverage

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,3 +32,9 @@ script:
 branches:
   only:
     - master
+
+script:
+    - vendor/bin/phpunit --coverage-clover=coverage.xml
+
+after_success:
+    - bash <(curl -s https://codecov.io/bash)
